--- a/src/index.html
+++ b/src/index.html
@@ -1,61 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Avalon Announcer</title>
-    <base href="/" />
 
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ab47bc" />
-    <meta name="msapplication-navbutton-color" content="#ab47bc" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="#ab47bc" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@imperialoctopus" />
-    <meta name="twitter:creator" content="@imperialoctopus" />
-    <meta property="og:locale" content="en_GB" />
-    <meta property="og:title" content="Fake Artist Companion App" />
-    <meta
-      name="description"
-      content="Companion app for A Fake Artist Goes to New York."
-    />
-    <meta
-      property="og:description"
-      content="Companion app for A Fake Artist Goes to New York."
-    />
-    <meta property="og:type" content="profile" />
-    <meta
-      property="og:url"
-      content="https://fake-artist.imperialoctopus.com/"
-    />
-    <meta property="og:image" content="assets/icons/icon-192x192.png" />
-    <meta property="fb:admins" content="1525407123" />
-    <meta property="profile:first_name" content="Zoey" />
-    <meta property="profile:last_name" content="Child" />
-    <meta property="profile:gender" content="female" />
-    <meta property="profile:username" content="imperialoctopus" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="72x72"
-      href="assets/icons/icon-72x72.png"
-    />
-    <link rel="manifest" href="manifest.json" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
-      rel="stylesheet"
-    />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>Avalon Announcer</title>
+  <base href="/" />
 
-  <body>
-    <app-root></app-root>
-    <noscript>
-      Please enable JavaScript to run this application.
-    </noscript>
-  </body>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#e8daef" />
+  <meta name="msapplication-navbutton-color" content="#e8daef" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#e8daef" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@imperialoctopus" />
+  <meta name="twitter:creator" content="@imperialoctopus" />
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:title" content="Avalon Announcer" />
+  <meta name="description" content="Companion app for The Resistance: Avalon." />
+  <meta property="og:description" content="Companion app for The Resistance: Avalon." />
+  <meta property="og:type" content="profile" />
+  <meta property="og:url" content="https://avalon.imperialoctopus.com/" />
+  <meta property="og:image" content="assets/icons/icon-192x192.png" />
+  <meta property="fb:admins" content="1525407123" />
+  <meta property="profile:first_name" content="Zoey" />
+  <meta property="profile:last_name" content="Child" />
+  <meta property="profile:gender" content="female" />
+  <meta property="profile:username" content="imperialoctopus" />
+  <link rel="icon" type="image/png" sizes="72x72" href="assets/icons/icon-72x72.png" />
+  <link rel="manifest" href="manifest.json" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+</head>
+
+<body>
+  <app-root></app-root>
+  <noscript>
+    Please enable JavaScript to run this application.
+  </noscript>
+</body>
+
 </html>
