--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#e8daef" />
-  <meta name="msapplication-navbutton-color" content="#e8daef" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="#e8daef" />
+  <meta name="theme-color" content="#6495ED" />
+  <meta name="msapplication-navbutton-color" content="#6495ED" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#6495ED" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@imperialoctopus" />
