--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>avalon_app</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#ffffff" />
+    <title>Avalon Announcer</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#6495ED" />
+    <meta name="msapplication-navbutton-color" content="#6495ED" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#6495ED" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@imperialoctopus" />
+    <meta name="twitter:creator" content="@imperialoctopus" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:title" content="Avalon Announcer" />
+    <meta
+      name="description"
+      content="Companion app for The Resistance: Avalon."
+    />
+    <meta
+      property="og:description"
+      content="Companion app for The Resistance: Avalon."
+    />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://avalon.imperialoctopus.com/" />
+    <meta property="og:image" content="assets/icons/icon-192x192.png" />
+    <meta property="fb:admins" content="1525407123" />
+    <meta property="profile:first_name" content="Zoey" />
+    <meta property="profile:last_name" content="Child" />
+    <meta property="profile:username" content="imperialoctopus" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="assets/app-icons/icon-128x128.png"
+    />
     <script defer src="main.dart.js"></script>
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <avalon-app>Loading...</avalon-app>
   </body>
 </html>
