--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,7 @@
       type="image/png"
       href="assets/app-icons/icon-128x128.png"
     />
+    <base href="/">
     <script defer src="main.dart.js"></script>
   </head>
   <body>
