--- a/lib/src/pages/play/play_component.html
+++ b/lib/src/pages/play/play_component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">
     <a (click)="muteButton()" class="mute-button">
       <img [src]="settings.mute ? 'assets/buttons/sound-off.png' : 'assets/buttons/sound-on.png'">
     </a>
@@ -17,4 +17,4 @@
       <img [src]="paused ? 'assets/buttons/sound-play.png' : 'assets/buttons/sound-pause.png'">
     </a>
   </div>
-  
+-->
