Add service exports to menu

--- a/lib/src/pages/menu/menu_component.html
+++ b/lib/src/pages/menu/menu_component.html
@@ -18,7 +18,7 @@
     <a class="character-row good">
       <img class="portrait" src="assets/characters/loyal-servant.png" />
       <span class="name">Loyal Servant</span>
-      <span class="number">{{ _characters.servants }}</span>
+      <span class="number">{{ characters.servants }}</span>
     </a>
     <a class="character-row good">
       <img class="portrait" src="assets/characters/merlin.png" />
@@ -27,20 +27,20 @@
     </a>
     <a
       class="character-row good"
-      (click)="_characters.toggleCharacter(Character.percival)"
+      (click)="characters.toggleCharacter(Character.percival)"
     >
       <img class="portrait" src="assets/characters/percival.png" />
       <span
         class="name"
         [ngClass]="{
-          strikethrough: !_characters.getCharacter(Character.percival)
+          strikethrough: !characters.getCharacter(Character.percival)
         }"
         >Percival</span
       >
       <img
         class="enabled"
         [src]="
-          _characters.getCharacter(Character.percival)
+          characters.getCharacter(Character.percival)
             ? 'assets/buttons/character-on.png'
             : 'assets/buttons/character-off.png'
         "
@@ -49,7 +49,7 @@
     <a class="character-row evil">
       <img class="portrait" src="assets/characters/minion.png" />
       <span class="name">Minion of Mordred</span>
-      <span class="number">{{ _characters.minions }}</span>
+      <span class="number">{{ characters.minions }}</span>
     </a>
     <a class="character-row evil">
       <img class="portrait" src="assets/characters/assassin.png" />
@@ -58,20 +58,20 @@
     </a>
     <a
       class="character-row evil"
-      (click)="_characters.toggleCharacter(Character.morgana)"
+      (click)="characters.toggleCharacter(Character.morgana)"
     >
       <img class="portrait" src="assets/characters/morgana.png" />
       <span
         class="name"
         [ngClass]="{
-          strikethrough: !_characters.getCharacter(Character.morgana)
+          strikethrough: !characters.getCharacter(Character.morgana)
         }"
         >Morgana</span
       >
       <img
         class="enabled"
         [src]="
-          _characters.getCharacter(Character.morgana)
+          characters.getCharacter(Character.morgana)
             ? 'assets/buttons/character-on.png'
             : 'assets/buttons/character-off.png'
         "
@@ -79,20 +79,20 @@
     </a>
     <a
       class="character-row evil"
-      (click)="_characters.toggleCharacter(Character.mordred)"
+      (click)="characters.toggleCharacter(Character.mordred)"
     >
       <img class="portrait" src="assets/characters/mordred.png" />
       <span
         class="name"
         [ngClass]="{
-          strikethrough: !_characters.getCharacter(Character.mordred)
+          strikethrough: !characters.getCharacter(Character.mordred)
         }"
         >Mordred</span
       >
       <img
         class="enabled"
         [src]="
-          _characters.getCharacter(Character.mordred)
+          characters.getCharacter(Character.mordred)
             ? 'assets/buttons/character-on.png'
             : 'assets/buttons/character-off.png'
         "
@@ -100,20 +100,20 @@
     </a>
     <a
       class="character-row evil"
-      (click)="_characters.toggleCharacter(Character.oberon)"
+      (click)="characters.toggleCharacter(Character.oberon)"
     >
       <img class="portrait" src="assets/characters/oberon.png" />
       <span
         class="name"
         [ngClass]="{
-          strikethrough: !_characters.getCharacter(Character.oberon)
+          strikethrough: !characters.getCharacter(Character.oberon)
         }"
         >Oberon</span
       >
       <img
         class="enabled"
         [src]="
-          _characters.getCharacter(Character.oberon)
+          characters.getCharacter(Character.oberon)
             ? 'assets/buttons/character-on.png'
             : 'assets/buttons/character-off.png'
         "
@@ -122,7 +122,7 @@
   </div>
   <a (click)="openPlayerDialog()" class="player-button">
     <img src="assets/buttons/player-dialog.png" />
-    <span>{{ _settings.getSetting(Setting.playerNumber) }}</span>
+    <span>{{ settings.getSetting(Setting.playerNumber) }}</span>
   </a>
   <a [routerLink]="Routes.play_page.toUrl()" class="play-button">
     <img src="assets/buttons/start.png" />
