--- a/lib/src/dialog/info/info_dialog_component.html
+++ b/lib/src/dialog/info/info_dialog_component.html
@@ -1,1 +1,30 @@
-<p>Click outside the dialog to dismiss.</p>
+<div class="main">
+  <p>
+    Created by: <a href="https://imperialoctopus.github.io/">Zoey Child</a
+    ><br />
+    Special thanks:
+    <a href="https://gcbgc.soc.srcf.net/" target="_blank">GCBGC</a>
+  </p>
+  <p>
+    <a
+      href="https://github.com/ImperialOctopus/avalon-printable/releases/tag/v1.0.0"
+      target="_blank"
+    >
+      Printable game board and cards
+    </a>
+  </p>
+  <p>
+    <a
+      href="https://upload.snakesandlattes.com/rules/r/ResistanceAvalon.pdf"
+      target="_blank"
+    >
+      Game rules (external)
+    </a>
+    <br />Provided by Snakes & Lattes
+  </p>
+  <p>
+    <a href="https://github.com/ImperialOctopus/avalon-app" target="_blank">
+      This project on GitHub
+    </a>
+  </p>
+</div>
