Clean up info component

--- a/lib/src/dialog/info/info_dialog_component.html
+++ b/lib/src/dialog/info/info_dialog_component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="container">
   <p>
     Created by: <a href="https://imperialoctopus.github.io/">Zoey Child</a
     ><br />
