Fix bug where minion number could be negative

--- a/lib/src/pages/menu/menu_component.html
+++ b/lib/src/pages/menu/menu_component.html
@@ -25,10 +25,7 @@
       <span class="name">Merlin</span>
       <span class="number">1</span>
     </a>
-    <a
-      class="character-row good"
-      (click)="characters.toggleCharacter(Character.percival)"
-    >
+    <a class="character-row good" (click)="toggleCharacter(Character.percival)">
       <img class="portrait" src="assets/characters/percival.png" />
       <span
         class="name"
@@ -56,10 +53,7 @@
       <span class="name">Assassin</span>
       <span class="number">1</span>
     </a>
-    <a
-      class="character-row evil"
-      (click)="characters.toggleCharacter(Character.morgana)"
-    >
+    <a class="character-row evil" (click)="toggleCharacter(Character.morgana)">
       <img class="portrait" src="assets/characters/morgana.png" />
       <span
         class="name"
@@ -77,10 +71,7 @@
         "
       />
     </a>
-    <a
-      class="character-row evil"
-      (click)="characters.toggleCharacter(Character.mordred)"
-    >
+    <a class="character-row evil" (click)="toggleCharacter(Character.mordred)">
       <img class="portrait" src="assets/characters/mordred.png" />
       <span
         class="name"
@@ -98,10 +89,7 @@
         "
       />
     </a>
-    <a
-      class="character-row evil"
-      (click)="characters.toggleCharacter(Character.oberon)"
-    >
+    <a class="character-row evil" (click)="toggleCharacter(Character.oberon)">
       <img class="portrait" src="assets/characters/oberon.png" />
       <span
         class="name"
