Update link to my website

--- a/lib/src/dialog/info/info_dialog_component.html
+++ b/lib/src/dialog/info/info_dialog_component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <p>
-    Created by: <a href="https://imperialoctopus.github.io/">Zoey Child</a
-    ><br />
+    Created by:
+    <a href="https://imperialoctopus.com/" target="_blank">Zoey Child</a><br />
     Special thanks:
     <a href="https://gcbgc.soc.srcf.net/" target="_blank">GCBGC</a>
   </p>
