Make playerNumber private

--- a/lib/src/dialog/player/player_dialog_component.html
+++ b/lib/src/dialog/player/player_dialog_component.html
@@ -5,7 +5,7 @@
     </a>
   </div>
   <div class="number">
-    <span>{{ playerNumber }}</span>
+    <span>{{ _playerNumber }}</span>
   </div>
   <div class="button">
     <a (click)="up()">
