--- a/lib/src/pages/play/play_component.html
+++ b/lib/src/pages/play/play_component.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <a (click)="muteButton()" class="mute-button">
+  <a (click)="toggleMute()" class="mute-button">
     <img
-      [src]="settings.mute ? 'assets/buttons/sound-off.png' : 'assets/buttons/sound-on.png'"
+      [src]="settings.getSetting(Setting.mute) ? 'assets/buttons/sound-off.png' : 'assets/buttons/sound-on.png'"
     />
   </a>
   <div class="title">
@@ -12,10 +12,10 @@
     <p>{{ cardText }}</p>
   </div>
 
-  <a (click)="stop()" class="stop-button">
+  <a (click)="endPlayback()" class="stop-button">
     <img src="assets/buttons/home.png" />
   </a>
-  <a (click)="pause()" class="pause-button">
+  <a (click)="togglePause()" class="pause-button">
     <img
       [src]="paused ? 'assets/buttons/sound-play.png' : 'assets/buttons/sound-pause.png'"
     />
