--- a/lib/src/dialog/settings/settings_dialog_component.html
+++ b/lib/src/dialog/settings/settings_dialog_component.html
@@ -1,26 +1,26 @@
 <div class="container">
-  <a class="row" (click)="setAnnouncer('en-gb-C')">
+  <a class="row" (click)="setAnnouncer(AnnouncerID.en_gb_c)">
     <img class="row-image" src="assets/settings-icons/en-gb-C-icon.png" />
     <span class="row-text">Announcer: Synth Female</span>
     <img
       class="row-enabled"
-      [src]="announcer == 'en-gb-C' ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'"
+      [src]="announcer == AnnouncerID.en_gb_c ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'"
     />
   </a>
-  <a class="row" (click)="setAnnouncer('en-gb-D')">
+  <a class="row" (click)="setAnnouncer(AnnouncerID.en_gb_d)">
     <img class="row-image" src="assets/settings-icons/en-gb-D-icon.png" />
     <span class="row-text">Announcer: Synth Male</span>
     <img
       class="row-enabled"
-      [src]="announcer == 'en-gb-D' ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'"
+      [src]="announcer == AnnouncerID.en_gb_d ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'"
     />
   </a>
-  <a class="row" (click)="setAnnouncer('cathy')">
+  <a class="row" (click)="setAnnouncer(AnnouncerID.cathy)">
     <img class="row-image" src="assets/settings-icons/cathy-icon.png" />
     <span class="row-text">Announcer: Cathy</span>
     <img
       class="row-enabled"
-      [src]="announcer == 'cathy' ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'"
+      [src]="announcer == AnnouncerID.cathy ? 'assets/buttons/character-on.png' : 'assets/buttons/character-off.png'"
     />
   </a>
   <a class="row" (click)="toggleSetting(Setting.verbose)">
