Fix pwa support

--- a/web/index.html
+++ b/web/index.html
@@ -31,11 +31,8 @@
     <meta property="profile:last_name" content="Child" />
     <meta property="profile:username" content="imperialoctopus" />
     <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="assets/app-icons/icon-128x128.png"
-    />
+    <link rel="icon" sizes="192x192" href="assets/app-icons/icon-192x192.png">
+    <link rel="apple-touch-icon" href="assets/app-icons/icon-192x192.png">
     <base href="/">
     <script defer src="main.dart.js"></script>
   </head>
